static/css/custom.css
/* Empty css file that users can override in their own /static/css/custom.css file */
@media (max-width: 48em) {
	.layout {
		display: none;
	}
	.layout-mobile {
		display: inline;
	}
	.sidebar {
		padding: 1rem 1rem;
	}
	.sidebar .author {
		margin-left: 90px;
		text-align: left;
		display: grid;
	}
	.sidebar .brand {
		float: left;
	}
	.sidebar .container {
		padding: 0;
	}
	.sidebar nav {
		text-align: right;
		display: grid;
	}
	.sidebar nav ul {
		margin: 0em;
		position: relative;
		top: 20%;
		height: 40px;
	}
	.sidebar nav ul li {
		display: inline;
		margin-right: 0.25em;
	}
	.sidebar img {
		margin: 0em;
		height: 80px;
		width: 80px;
	}
}

@media (min-width: 48em) {
	.layout {
		display: inline;
	}
	.layout-mobile {
		display: none;
	}
}

.article-toc nav {
	margin-left: 0em;
	overflow-x: hidden;
}

.entries li {
	flex-wrap: wrap;
}

.sidebar-nav .heading-mobile {
	margin-right: 0.4em;
}

a.pswp-gallery__item {
	margin-bottom: 0.5em;
	margin-right: 0.5em;
	max-height: 260px;
	flex: auto;
	overflow: hidden;
}
img.lightbox {
	object-fit: cover;
	width: 100%;
	height: auto;
	max-height: 260px;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}
div.lightbox-badge {
	display: inline-block;
	box-sizing: border-box;
	position: relative;
	bottom: 3.5em;
	left: 5px;
	padding: 5px;
	color: #FFF;
	background: rgba(0,0,0,0.5);
	line-height: 1;
	transition: opacity 100ms linear;
	font-size: 16px;
	font-weight: normal;
	border: var(--ifm-badge-border-width) solid var(--ifm-badge-border-color);
	border-radius: var(--ifm-badge-border-radius);
}
div.lightbox-badge--hidden {
	opacity: 0;
}

img:not(.lightbox) {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.pswp-gallery {
	display: flex;
	flex-wrap: wrap;
}

